fix: overflowing words
  * add so it breaks the word over lines regardless of how it looks,
works for the time being

--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@ body,
 }
 
 .border-green {
-  box-shadow: 0px 0px 0px 2px #A1C59F;
-  -webkit-box-shadow: 0px 0px 0px 2px #A1C59F;
+  box-shadow: 0px 0px 0px 2px #a1c59f;
+  -webkit-box-shadow: 0px 0px 0px 2px #a1c59f;
   -moz-box-shadow: 0px 0px 0px 2px rgba#A1C59F;
 }
 
@@ -55,4 +55,8 @@ body,
 
 .darkerBg:hover {
   background-color: rgb(0, 0, 0, 0.1);
+}
+
+.overflow-wrap {
+  overflow-wrap: break-word;
 }
